--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <section id="main">
     
     <nav>
-        <a href="index.html"><img src=".\images\GDSC___DJSCE.1f798331d8f44334dca6 (1).png"></a>
+        <a href="gdsc.html"><img src=".\images\GDSC___DJSCE.1f798331d8f44334dca6 (1).png"></a>
     <div id ="nav-bars">   
         <ul>
        <li><a href="index.html">HOME</a></li>
