--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <section id="main">
     
     <nav>
-        <a href="gdsc.html"><img src=".\images\GDSC___DJSCE.1f798331d8f44334dca6 (1).png"></a>
+       <a href = "index.html"><img src=".\images\GDSC___DJSCE.1f798331d8f44334dca6 (1).png"></a>
     <div id ="nav-bars">   
         <ul>
        <li><a href="index.html">HOME</a></li>
@@ -36,18 +36,18 @@
     </div>
   <div id="gdscinfo">
     <img src=".\images\1_cRSs6Icwnk2qQ9yLzEi8jg.png" id="downimg">
-    <h2 >What is GDSC? </h2>
+        <h2 >What is GDSC? </h2>
         <p id="info"><b><a href="https://gdsc.community.dev/">Google Developer Student Clubs (GDSC)</a> are community groups for college and university students 
         interested in Google developer technologies. Students from all undergraduate or graduate 
         programs with an interest in growing as a developer are welcome. By joining a GDSC, students 
         grow their knowledge in a peer-to-peer learning environment and build solutions for local businesses
         and their community.</b></p>
-        </div>
+  </div>
   </section>
 <section id="footer">
 <div id="links">
     <ul>
-      <li id="simg"><a href="https://www.linkedin.com/company/gdsc-djsce/"><img src=".\images\linkedin-logo-linkedin-icon-transparent-free-png.webp"></a></li>
+              <li id="simg"><a href="https://www.linkedin.com/company/gdsc-djsce/"><img src=".\images\linkedin-logo-linkedin-icon-transparent-free-png.webp"></a></li>
               <li id="simg"><a href="https://www.instagram.com/gdsc.djsce/"><img src=".\images\Instagram-Logo.wine.svg"></a></li>
               <li id="simg"><a href="https://gdsc-djsce.netlify.app/"><img src=".\images\dsc-3d-logo-img2.png"></a></li>
     </ul>
